Integer.valueOf(..) used instead of the less efficient new Integer()
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@182125 523d945c-050c-4681-91ec-863ad3bb968a